--- a/html/style.css
+++ b/html/style.css
@@ -128,6 +128,7 @@ input {
     outline: none;
 	border-bottom: 1px solid #009688;
 	height: 40px;
+	width: 350px;
 	background-color: #2F4056;
 }
 input:focus{
