--- a/html/flyudk/css/index.css
+++ b/html/flyudk/css/index.css
@@ -13,7 +13,7 @@
 	position: absolute; left: 53px; top: 100px;
 }
 
-#headudk{/*开始标题中的小鸟*/
+#headudk{/*开始标题中的UDK姐贵*/
 	float:right;
 	margin-top: 25px;
 }
