--- a/html/flyudk/css/style.css
+++ b/html/flyudk/css/style.css
@@ -11,7 +11,7 @@
     background-image: url(../img/head.png);
     position: absolute; left: 53px; top: 100px;
 }
-#headudk{/*开始标题中的小鸟*/
+#headudk{/*开始标题中的UDK姐贵*/
     float:right;
     margin-top: 25px;
 }
